--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birds</title>
+</head>
+<body>
 
+    <header>
+        <h1>Bem-vindos ao Birds!</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Pássaros</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Urutau</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/M%C3%A3e-da-lua-gigante_%28Nyctibius_grandis%29.jpg/1280px-M%C3%A3e-da-lua-gigante_%28Nyctibius_grandis%29.jpg" alt="Descrição da imagem" width="300">
+        </section>
+
+        <section>
+            <h2>Sobre</h2>
+            <article>
+                <h3>Características</h3>
+                <p>Conhecido também como mãe-da-lua. Apresenta o nome cinetífico de Nyctibius griseus. É encontrado em toda a América do Sul e em partes da América Central. É uma ave com hábitos noturnos e possui uma adaptação única, chamada de "olho mágico". São duas fendas na pálpebra superior, as quais permitem que fique imóvel por longos períodos, observando os arredores, mesmo de olhos fechados. Mede entre 33 e 38 centímetros de comprimento e pesam entre 145 e 202 gramas. As plumagens são de cores distintas, conhecidas como fase cinza e fase marrom. Cores que influenciam na ótima camuflagem da ave, que faz parecer um galho ou tronco de árvore.  Possui uma boca grande, ideal para capturar insetos em pleno voo, um canto melancólico que lembra um lamento humano e lhe rendeu os nomes de "mãe da lua" e "ave-fantasma". </p>
+            </article>
+
+            <article>
+                <h3>Lenda da Ave-fantasma</h3>
+                <p>Na densa mata habitava a bela filha do cacique de certa tribo, enamorada por um jovem guerreiro da mesma tribo, a quem amava profundamente. Amava e era amada. Ao saber do romance, o pai da menina, enfurecido pelo ciúmes, usou suas artes mágicas e tomou a decisão de acabar com o namoro da maneira mais trágica: matar o pretendente. Ao sentir o desaparecimento de seu amado, a jovem índia entrou na selva para procurá-lo. Enorme foi sua surpresa ao perceber o terrível fato. Em estado de choque, voltou para casa e ameaçou contar tudo à comunidade. O velho pai, furioso, a transformou em uma ave noturna para que ninguém soubesse do acontecido. Porém, a voz da menina passou à ave. Por isso, durante as noites, ela sempre chora a morte de seu amado com um canto triste e melancólico.</p>
+            </article>
+        </section>
+
+        <section>
+            <h2>Mídia</h2>
+            <h3>Conheça o Urutau</h3>
+            <video width="320" height="240" controls>
+                <source src="midia/video.mp4" type="video/mp4">
+                Seu navegador não suporta vídeos em HTML5.
+            </video>
+
+            <h3>Canto do Urutau</h3>
+            <audio controls>
+                <source src="midia/audio.mp3" type="audio/mpeg">
+                Seu navegador não suporta áudio em HTML5.
+            </audio>
+        </section>
+    </main>
+
+    <footer>
+        <p>Feito por [Emanuelly] - [05/09/25]</p>
+    </footer>
+
+</body>
+</html>
