--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <h2>Mídia</h2>
             <h3>Conheça o Urutau</h3>
             <video width="320" height="240" controls>
-                <source src="midia/video.mp4" type="video/mp4">
+                <source src="assets/videoplayback.mp4" type="video/mp4">
                 Seu navegador não suporta vídeos em HTML5.
             </video>
 
             <h3>Canto do Urutau</h3>
             <audio controls>
-                <source src="midia/audio.mp3" type="audio/mpeg">
+                <source src="assets/videoplayback.mp3" type="audio/mp3">
                 Seu navegador não suporta áudio em HTML5.
             </audio>
         </section>
