--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </main>
 
     <footer>
-        <p>Feito por [Emanuelly] - [05/09/25]</p>
+        <p>Feito por [Emanuelly, Tayssa e Thallita] - [09/09/25]</p>
     </footer>
 
 </body>
