--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
 
         <section>
-            <h2>Mídia</h2>
+            <h2>Material Áudio Visual</h2>
             <h3>Conheça o Urutau</h3>
             <video width="320" height="240" controls>
                 <source src="assets/videoplayback.mp4" type="video/mp4">
