--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
             </article>
         </section>
 
-        <section>
+       <section>
             <h2>Material Áudio Visual</h2>
             <h3>Conheça o Urutau</h3>
-            <video width="320" height="240" controls>
-                <source src="assets/videoplayback.mp4" type="video/mp4">
-                Seu navegador não suporta vídeos em HTML5.
-            </video>
+            <iframe width="320" height="240" src="https://www.youtube.com/embed/2lg8I4xRekM" frameborder="0"                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-                      picture"allowfullscreen></iframe>
 
             <h3>Canto do Urutau</h3>
             <audio controls>
@@ -52,7 +49,7 @@
             </audio>
         </section>
     </main>
-
+    
     <footer>
         <p>Feito por [Emanuelly, Tayssa e Thallita] - [09/09/25]</p>
     </footer>
