--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <iframe width="320" height="240" src="https://www.youtube.com/embed/2lg8I4xRekM" frameborder="0"                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-                      picture"allowfullscreen></iframe>      
             <h3>Canto do Urutau</h3>
             <audio controls>
-                <source src="audio/videoplayback (1).mp3" type="audio/mp3">
+                <source src="audio/videoplayback.mp3" type="audio/mp3">
                 Seu navegador não suporta áudio em HTML5.
             </audio>
         </section>
